# planitout

./: .gitignore  CHANGELOG.md  LICENSE  README.md  noxfile.py  pyproject.toml  skeleton.yaml
src/planitout/: __main__.py  beamer.py  cli.py  lesson_plan.py
tests/: conftest.py  test_beamer.py  test_lesson_plan.py
tests/fixtures/: beamer.tex  lesson_plan.tex  lesson_plan.yaml  lesson_plan2.tex
