[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "planitout"
version = "0.2.4"
authors = [
  { name="Vincent Archambault-B", email="vincentarchambault@icloud.com" },
]
description = ""
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["teaching", "planning"]
dependencies = [
  "pyyaml",
  "pydantic",
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/archambaultv/planitout"
Issues = "https://github.com/archambaultv/planitout/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/planitout"]
